Fix: common > selection, scrollbar 스타일 추가 및 뷰티파이

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,12 @@ html { scrollbar-width: none; font-family: sans-serif; -webkit-text-size-adjust:
 
 body { overflow: hidden; font-family: Suisseintl, sans-serif; font-size: 14px; font-weight: 400; line-height: 1.2; background-color: #000; color: rgba(255, 255, 255, 0.96); }
 
+::-moz-selection { background-color: #1d4f62; color: #fff; }
+
+::selection { background-color: #1d4f62; color: #fff; }
+
+::-webkit-scrollbar { display: none; }
+
 svg { display: block; }
 
 button { cursor: pointer; }
